# TSA

./: .env.example  .gitignore  README.md  docker-compose.server.yml  docker-compose.yml
docs/: architecture.md  auth-foundation.md  backlog.md  booking-foundation.md  cart-foundation.md  cart-service-foundation.md  checkout-foundation.md  database-principles.md  flight-results-sprint.md  flight-search-foundation.md  gcp-vm-deployment.md  github-setup.md  local-development.md  (+7 more)
services/booking-service/: Dockerfile  pyproject.toml
services/booking-service/app/: __init__.py  main.py  models.py  routers.py  schemas.py  service.py
services/booking-service/app/core/: __init__.py  database.py  settings.py
services/booking-service/migrations/: 0001_init_booking_foundation.sql
services/booking-service/scripts/: apply_migration.sh
services/user-service/: Dockerfile  pyproject.toml
services/user-service/app/: main.py
services/user-service/app/api/: dependencies.py
services/user-service/app/core/: __init__.py  database.py  security.py  settings.py
services/user-service/app/models/: __init__.py  audit.py  password_reset.py  rbac.py  user.py
services/user-service/app/routers/: __init__.py  admin.py  auth.py  health.py  users.py
services/user-service/app/schemas/: __init__.py  admin.py  auth.py  user.py
services/user-service/app/services/: __init__.py  audit_service.py  auth_service.py
services/user-service/migrations/: 0001_init_auth_foundation.sql  0002_admin_audit_password_reset.sql
services/user-service/scripts/: apply_migration.sh  grant_admin_role.sh
(+207 files in other folders)
